--- a/ui/src/main/resources/test/index.html
+++ b/ui/src/main/resources/test/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Spring Data Rest + jQuery + Bootstrap Test</title>
+    <title>Recipebook</title>
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap-utilities.min.css" />
     <link rel="stylesheet" type="text/css" href="/webjars/font-awesome/css/all.min.css" />
