server side validation implemented

--- a/ui/src/main/resources/demo/index.html
+++ b/ui/src/main/resources/demo/index.html
@@ -4,8 +4,8 @@
     <title>Recipebook</title>
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap-utilities.min.css" />
-    <link rel="stylesheet" type="text/css" href="/webjars/font-awesome/css/all.min.css" />
-    <link rel="stylesheet" type="text/css" href="webjars/bootstrap-icons/font/bootstrap-icons.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="/webjars/font-awesome/css/all.min.css" /> -->
+    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap-icons/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&display=swap">
 
     <style type="text/css">
